# polymarketplay

./: .env.example  .gitignore  Nuggets vs. Magic.txt  README.md  a.json  backtest_skeleton.py  backup_print_block.txt  check_orders.py  copytrader_minimal.py  debug_matcher.py  fetch_and_save.py  get_sport_keys.py  get_token_id_from_url.py  get_token_ids_from_url.py  get_tokens.py  giayn_asset_id_finder.py  giayn_trades_and_books_tocsv.py  odds_snapshot.json  poly_markets_dump.json  polymarket2.py  polymarket_utils.py  price_change_dump.py  print_edge.py  print_edge_v2.py  print_edge_v3.py  print_edge_v4.py  print_edge_v5.py  print_price_change.py  pyproject.toml  python_first_trade.py  real_money_bot.py  server.py  sleepy_monitor.py  submitting_transactions.py  super_compress_giayn.py  test.py  test_market_order.py  test_small_limit_order.py  trades_logger.py  websocket_demo.py
aws-troubleshooting/: s3_upload_errors.txt
frontend/: package-lock.json  package.json  tsconfig.json  tsconfig.node.json
polymarket_bot/: __init__.py  book.py  clients.py  config.py  engine.py  utils.py
polymarket_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: __init__.py  check_orders.py  copytrader.py  derive_clob_l2_creds.py  edge_scanner.py  game_lookup.py  latency_check.py  print_events.py  test_allowance.py  test_fetch.py  test_market_order.py  trades_and_books.py  trades_and_books_tracker.py  verify_book.py
src/: book.py  clients.py  config.py  engine.py  models.py  utils.py
tests/: test_allowance.py  test_fetch.py  test_market_order.py  test_ping.py  (+1 more)
(+55 files in other folders)
